# SpotifyAPI

./: .pre-commit-config.yaml  CODEOWNERS  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
spotify/models/: albums.py  artists.py  episodes.py  playlists.py  users.py
spotify/models/shared/: external_urls.py  paging_object.py  resume_point.py
spotify_py/models/: __init__.py  albums.py  artists.py  audio_analysis.py  audio_features.py  audiobooks.py  base.py  categories.py  chapters.py  devices.py  episodes.py  playback.py  playlists.py  recommendations.py  shows.py  tracks.py  users.py
spotify_py/models/shared/: __init__.py  copyright.py  external_ids.py  followers.py  image.py  paging_object.py  restrictions.py
